--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
     <title>Destination Maternity</title>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
 </head> 
 <body>
     <div id="container">
         <div id="header">
             <h1>SERINITY<sub><i>theme</i></sub></h1>
-            <img src="image\girls.png"/></div>
+            <img src="girls.png"/></div>
         <div id="menubar">
             <ul>
                 <li><a href="#"><b>Home</b></a></li>
@@ -29,7 +29,7 @@
             <ul>
     </div>
     <div class="container">
-        <img src="image/momp.png" style="width:60;">
+        <img src="momp.png" style="width:60;">
         <div class="text-block">
           <h4>Joy of being a mother</h4>
     <p>"Nothing else can produce the joy that motherhood allows.
@@ -41,7 +41,7 @@
       <div id="section2">
           <div id="content1">
             <h4 class="heading"><b>Fitness and Exercise</b></h4>
-            <img src="image/cont1.png"/>
+            <img src="cont1.png"/>
             <h4 class=sheading><b>Fitness tips for healthy lifestyle</b></h4>
             <p class= "para">There is no shortcut to healthy state, 
                 no magic fruit that lets you hit your target and 
@@ -54,7 +54,7 @@
         
           <div id="content2">
             <h4 class="heading2"><b>Health and Well Being</b></h4>
-            <img src="image/cont2.png" width="280" height="220"/>
+            <img src="cont2.png" width="280" height="220"/>
             <h4 class=sheading2><b>The Benifits of Getting a Head Massage</b></h4>
             <p class= "para2">Research shows that massage can reduce stress hormones in your body
                  and relax and loosen your muscles. It can also increase blood flow, which is so 
@@ -65,7 +65,7 @@
         </div>
         <div id="content3">
             <h4 class="heading3"><b>About Me</b></h4>
-            <img src="image/cont3.png"/> 
+            <img src="cont3.png"/> 
             <p class= "para3">I am hopeless starbucks addict and 
                 freelance internet consultant living in Chicago.I write poetry and love music.<a  href="#" class="more2">[Read More..]</a></p> 
                 <h3 class="heading3f"><b>Recent Posts</b></h3>
